--- a/analysis.Rmd
+++ b/analysis.Rmd
@@ -4,25 +4,29 @@ output: html_document
 
 # Analysis
 
+Now that we've properly conducted an EDA of our federal sentencing data, we can dive into analyzing this data further. One main way that we analyze data is through fitting regressions. Regressions can be used to model the relationships between different explanatory variables and a chosen response variable. There are many kinds of regressions, but the most common and simplest regression is a simple linear regression. To explore linear regression, let's first take a step back from the federal sentencing data, and turn to two simpler data sets for examples. 
+
 ## Fitting Lines to Data
 
 Suppose we want to predict how much electricity the city of Los Angeles, California will use based on the daily temperature. As the temperature goes higher, more people will turn on their air conditioners and use more electricity. We can look at past electricity use data and compare it to the temperature each day to get a sense of how these two attributes are related. Knowing and understanding how two variables relate can help you plan for future possibilities or identify and correct patterns that you don't want to continue. For example, we can use this relationship to makes predictions of how much electricity Los Angeles will use in the future if we know the future temperature, and make sure that there is enough for the city's needs.
 
-Let's make two example points, point A at (1,2) and point B at (3,5). In R, we will save this into a data frame using a vector of the x values, 1 and 3, and a vector of the matching y values, 2 and 5.
+Let's make two example points, point A at (1,2) and point B at (3,5). In R, we will save these points in a data frame using a vector of the x values, 1 and 3, and a vector of the matching y values, 2 and 5.
 
 ```{r}
-twopoints <- data.frame(xvals = c(1,3), yvals = c(2,5), label = c('A','B'))
+twopoints <- data.frame(xvals = c(1,3), 
+                        yvals = c(2,5), 
+                        label = c('A','B'))
 head(twopoints)
 ```
 
-We can make a fairly simple plot of these two points.
+We can make a fairly simple plot of these two points, using `geom_point()` as we did in our EDA, and `geom_text()` to label our points. 
 
 ```{r}
-twoplot <- ggplot(twopoints, aes(x=xvals, y=yvals)) + 
-  geom_point(color='coral2') + 
-  geom_text(aes(label=label), nudge_y = .3 ) +
-  xlim(0,6) + 
-  ylim(0,6)
+twoplot <- ggplot(twopoints, aes(x = xvals, y = yvals)) + 
+  geom_point(color = 'coral2') + 
+  geom_text(aes(label = label), nudge_y = .3) +
+  xlim(0, 6) + 
+  ylim(0, 6)
 twoplot
 ```
 
@@ -44,91 +48,143 @@ $$
 y = \frac{3}{2} x+ \frac{1}{2}
 $$
 
-We can plot the results. Here we use the `abline()` function, to plot our linear equation which can be done by inputting the values for the slope and the intercept.
+We can plot the results. Here we use the `geom_abline()` function, to plot our linear equation which can be done by inputting the values for the slope and the intercept.
 
 ```{r}
-twoplot + geom_abline(slope=3/2, intercept = 1/2)
+twoplot + geom_abline(slope = 3/2, 
+                      intercept = 1/2)
 ```
+
+Great, notice that the line above goes right through our two data points.
 
 ### Numerically Fit a Line to Two Points
 
+If we want to reduce the amount of calculations required to fit a line to two points, we can instead just rely on R to do the work for us. We can use the linear model function, `lm()` to carry out a regression for us. We just input our `yvals` and `xvals` along with our data `twopoints` to fit a linear model using R. 
+
 ```{r}
-twolinear <- lm(formula = yvals ~ xvals, data=twopoints)
+twolinear <- lm(formula = yvals ~ xvals, 
+                data = twopoints)
 twolinear
 ```
 
+### Analytically Fit a Line to Three Points
 
-Notice that the line above goes right through our two data points.
-
-We know that two points alone uniquely define a line, but what do we think will happen if we have to find a line that describes the goes through three data points? Let's add the point (2,3) to our exisiting set and see what happens when try to draw a line through these three points. Below, we will use R to plot three graphs of our points, each attempting to find a line that goes through all three data points.
+We know that two points alone uniquely define a line, but what do we think will happen if we have to find a line that describes the goes through three data points? Let's add the point (2,3) to our existing set and see what happens when try to draw a line through these three points. Below, we will use R to plot three graphs of our points, each attempting to find a line that goes through all three data points. Don't worry too much on the coding for now, but pay attention to the resulting plots. 
 
 ```{r, fig.width=12}
-threepoints = rbind(twopoints, data.frame(xvals = 2, yvals = 3, label='C'))
-threepoints$yfit1 = threepoints$xvals*3/2+1/2
-threepoints$yfit2 = threepoints$xvals+1
-threepoints$yfit3 = threepoints$xvals*2-1
+threepoints = rbind(twopoints, 
+                    data.frame(xvals = 2, yvals = 3, label = 'C'))
+threepoints$yfit1 = threepoints$xvals*3/2 + 1/2
+threepoints$yfit2 = threepoints$xvals + 1
+threepoints$yfit3 = threepoints$xvals*2 - 1
 
-threeplot = ggplot(threepoints, aes(x=xvals, y = yvals)) + 
+threeplot = ggplot(threepoints, aes(x = xvals, 
+                                    y = yvals)) + 
   geom_point(color = 'coral2')  + 
-  geom_text(aes(label=label), nudge_y = 0.3, check_overlap = TRUE) +
-  xlim(0,6) + ylim(0,6)
+  geom_text(aes(label = label), 
+            nudge_y = 0.3, 
+            check_overlap = TRUE) +
+  xlim(0,6) + 
+  ylim(0,6)
 
 grid.arrange(
-  threeplot + geom_abline(slope=3/2, intercept = 1/2) + geom_segment(aes(xend = xvals, yend = yfit1), color='coral2'),
-  threeplot + geom_abline(slope=1, intercept = 1) + geom_segment(aes(xend = xvals, yend = yfit2), color='coral2'),
-  threeplot + geom_abline(slope=2, intercept = -1) +  geom_segment(aes(xend = xvals, yend = yfit3), color='coral2'),
-ncol=3
-)
+  threeplot + 
+    geom_abline(slope = 3/2, intercept = 1/2) + 
+    geom_segment(aes(xend = xvals, 
+                     yend = yfit1), 
+                 color = 'coral2'),
+  threeplot + 
+    geom_abline(slope = 1, intercept = 1) + 
+    geom_segment(aes(xend = xvals, 
+                     yend = yfit2), 
+                 color = 'coral2'),
+  threeplot + 
+    geom_abline(slope = 2, intercept = -1) +  
+    geom_segment(aes(xend = xvals, 
+                     yend = yfit3), 
+                 color='coral2'),
+  ncol=3)
 ```
+
 Notice in all three graphs above, we can't draw a straight line through all three points at the same time. The best that we can do is try to find a line that gets very close to all theree points, or fits these three points the best. But how can we define "the best" line that fits this data?
 
-To understand which line *best fits* our three data points, we need to talk about the **error**, which is also called the **residual** in statistics. The residual is the vertical distance between the predicted data point y (on the line) and the actual value of y our data takes on at that  point (the value we collected) at each of our data points. In our data set we have the points (1,2), (2,3), and (3,5) so the only actual values for y in our data set are 2,3, and 5 even though our prediction line (our model) takes on all values of y between 0 and 6.
+To understand which line *best fits* our three data points, we need to talk about the **error**, which is also called the **residual** in statistics. The residual is the vertical distance between the predicted data point y (on the line) and the actual value of y our data takes on at that  point (the value we collected) at each of our data points. In our data set we have the points (1,2), (2,3), and (3,5) so the only actual values for y in our data set are 2, 3,and 5 even though our prediction line (our model) takes on all values of y between 0 and 6.
 
 
 ### Numerically Fit a Line to Three Points
-To find the model that best fits our data, we want to make the error as small as possible. Linear regression is a techique that allows us to identify the line that minimizes our error, this line is called a *linear regression model* and is the line that best fits our data. Below, you will see R code to identify the model that best fits our data.
+To find the model that best fits our data, we want to make the error as small as possible. To expand on our definition of linear regression above, linear regression is a technique that allows us to identify the line that minimizes our error. This line is called a *linear regression model* and is the line that best fits our data. Below, you will see R code to identify the model that best fits our data.
 
 ```{r}
-threelinear = lm(formula=yvals~xvals, data=threepoints)
+threelinear = lm(formula = yvals ~ xvals, 
+                 data = threepoints)
 threelinear
 ```
 
 ```{r}
 threepoints$linfit = 1.5*threepoints$xvals + 0.3333
-ggplot(threepoints, aes(x=xvals, y = yvals)) + 
-  geom_point(color='coral2')  + 
-  geom_text(aes(label=label), nudge_y = -0.4 ) +
-  xlim(0,6) + ylim(0,6)+ 
-  geom_abline(slope=1.5, intercept=0.3333) + 
-  geom_segment(aes(xend = xvals, yend = linfit), color='coral2')
+ggplot(threepoints, aes(x = xvals, 
+                        y = yvals)) + 
+  geom_point(color = 'coral2')  + 
+  geom_text(aes(label = label), 
+            nudge_y = -0.4 ) +
+  xlim(0,6) + 
+  ylim(0,6) + 
+  geom_abline(slope = 1.5, intercept = 0.3333) + 
+  geom_segment(aes(xend = xvals, 
+                   yend = linfit), 
+               color = 'coral2')
 ```
+
 Notice that the best fit linear model doesn't go through any of our three points! **Why do you think that is?**
 
-Keep in mind, our goal is to minimize our error as much as we can. In each of the four previous graphs, the error (or the distance between the predicted y value and the actual y value) is shown on the graph. Of the four plots we just made of lines through our three data points, which looks like it has the smallest error?
+Keep in mind, our goal is to minimize our error as much as we can. In each of the four previous graphs, the error (or the distance between the predicted y value and the actual y value) is shown on the graph, highlighted in the coral color. Of the four plots we just made of lines through our three data points, which one seems to have the smallest error?
+
+> NOTE: Whenever you employ linear regression, there are various conditions you must make sure are satisfied before proceeding. You can use the acronym L.I.N.E to remember that you must satisfy linearity, independence, normality, and equal variance conditions. For the purposes of this tutorial, we won't go in depth about what these conditions mean and how you can check these conditions, but make sure to keep them in mind for your future data analyses. Conditions are super important in statistical analysis!
 
 ## Fitting a Line to Many Points: Linear Regression!
-Now let's go back to our penguins data. Do you think a linear model might be a good way to model the data? Run the code below to create a scatterplot of flipper length versus body mass. 
+Now let's turn to another example data set. This new dataset focuses on penguins. Do you think a linear model might be a good way to model the data? Run the code below to create a scatter plot of flipper length versus body mass. 
 
-```{r}
-pengscat = ggplot(penguins, aes(x=body_mass_g, y=flipper_length_mm)) + 
-  geom_point(color='coral2', alpha=0.7)
+```{r, warning = FALSE, fig.width = 5, fig.height = 4}
+data(penguins)
+
+pengscat = ggplot(penguins, aes(x = body_mass_g, 
+                                y = flipper_length_mm)) + 
+  geom_point(color = 'coral2', alpha = 0.7) +
+  labs(x = "Body Mass (grams)",
+            y = "Flipper Length (mm)",
+            title = "Flipper Length by Body Mass of Penguins")
 pengscat
 ```
+
 Take a look at the scatterplot, does it look like most of the data fall along a straight line? If the general shape is a line, then yes, we should try to model this data with linear regression line.
 
 ```{r}
-pengfit = lm(formula = flipper_length_mm ~ body_mass_g, data = penguins)
+pengfit <- lm(formula = flipper_length_mm ~ body_mass_g, 
+             data = penguins)
 pengfit
 ```
-Here R givs us the slope and intercept of the straight line that best fits our data. Let's graph this line together with our data using the code below. 
 
-```{r}
+Here R gives us the slope and intercept of the straight line that best fits our data. Let's graph this line together with our data using the code below. 
+
+```{r, warning = FALSE}
 pengscat + geom_abline(slope= 0.0152, intercept = 137.0396)
 ```
-- still need how to evaluate whether we have a good model R^2
+
+That looks like a pretty good fit, right? But how do we evaluate how good of a fit the linear regression provides? One function we can use in R is `msummary()`. This function provides an overview of the fitted model.  
+
+```{r}
+library(mosaic) # check if i can add this for a simpler summary... otherwise use just summary
+msummary(pengfit)
+
+#summary(pengfit)
+```
+
+There is a lot of information that comes out of this function, but just focus on "Multiple R-squared" for now. $R^2$ represents the percent of variation in the response y-variable that is explained by the explanatory x-variable(s). Can you find the $R^2$ for this model in the summary table? 
+
+You probably found 0.759 on the table. This means that 75.9% of the variation in flipper length can be explained by the body mass of penguins. That is a pretty high $R^2$, especially for observational data. Therefore, we can consider this model to be quite good for modeling flipper length. 
 
 ## Categorical Data to Numerical Representations
-So that we can analyze the sentencing data that we looked at earlier, we will need to explore scatterplots where only on variable is numerical and the other is categorical. Let's compare flipper length to penguin species. Remember that flipper length is a numerical varible and species is a categorical variable with three levels (Adelie, Chinstrap, and Gentoo).
+So far we've only explored linear regression with numerical variables, but we can use categorical variables as well. Let's compare flipper length to penguin species. Remember that flipper length is a numerical varible and species is a categorical variable with three levels (Adelie, Chinstrap, and Gentoo).
 
 To start, let's consider one level at a time, so we can get a good sense of what is the relationship between species and flipper length. Below we examine Adelie penguins first.
 
